--- a/dpi-frontend/package.json
+++ b/dpi-frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
