--- a/dpi-frontend/package.json
+++ b/dpi-frontend/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "i18next": "^25.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
     "react-scripts": "^0.0.0"
   },
   "devDependencies": {
